k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-showcase
  namespace: showcase-platform
spec:
  ingressClassName: nginx
  rules:
    - host: petclinic.ninja.test
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-app-service
                port:
                  number: 8080
